[package]
name = "smart-top"
version = "0.1.1"
edition = "2021"
description = "Smart top: a TUI that diagnoses why your computer is slow and names the process responsible."
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamatan/smart-top"
homepage = "https://github.com/adamatan/smart-top"
readme = "README.md"
keywords = ["tui", "top", "sysinfo", "monitor", "diagnostics"]
categories = ["command-line-utilities"]

[[bin]]
name = "stop"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "adamatan/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
